[package]
name = "mypest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
lazy_static = "1.4.0"
pest = "2.7.1"
pest_derive = { version = "2.7.1", features = ["grammar-extras"] }
